changment au niveau de header

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>OP_project !</h1>
+    <header>
+      <h1>OP_project !</h1>
+    </header>
     <h2>introduction:</h2>
     <h3>ce ci est un test pour aprendre des base sur Git et GitHube  </h3>
-    
+    <h2>j'essaye de faire quelque modification pour tester si la branche fonctionne<h2>
 </body>
 </html> 
